[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/JetBrainsMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/fonts/JetBrainsMono-2.304/fonts/ttf/JetBrainsMono-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/audio/kenney interface sounds/bong_001.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=22]
size = 26
use_mipmaps = true
extra_spacing_bottom = -5
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=15]
default_font = SubResource( 22 )

[sub_resource type="DynamicFont" id=16]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
buttonAudio = NodePath("ButtonAudioStreamPlayer3D")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_bottom = 1.0
margin_right = 152.0
margin_bottom = -10.0
alignment = 2

[node name="VersionLabel" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 1006.0
margin_right = 304.0
margin_bottom = 1036.0
theme = SubResource( 15 )
text = "v0.3 playtest"
valign = 2

[node name="CreditsLabel" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 1040.0
margin_right = 304.0
margin_bottom = 1070.0
theme = SubResource( 15 )
text = "Made by Chris Kurcz"
valign = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = 280.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_right = 1740.0
margin_bottom = 800.0

[node name="ResumeButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_right = 1740.0
margin_bottom = 106.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "Resume"
align = 0

[node name="MenuButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 1740.0
margin_bottom = 216.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "Main Menu"
align = 0

[node name="ExitButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 1740.0
margin_bottom = 326.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "Exit"
align = 0

[node name="ButtonAudioStreamPlayer3D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[connection signal="mouse_entered" from="ColorRect/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
